--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </title>
 <link type="text/css" href="css/style.css" rel="stylesheet" />
 
-<audio src="./bgm/2PM - Moon & Back (往返月球).mp3"  autoplay="autoplay"> </audio> 
+<bgsound src="./bgm/2PM - Moon & Back (往返月球).mp3" loop="-1"> loop=-1
 </head>
 <body>
 <div class="box">
