--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <meta charset="UTF-8">
 <title>开心小严
 </title>
+<audio src="./bgm/2PM - Moon & Back (往返月球).mp3" autoplay="autoplay" loop="true"></audio>
 <link type="text/css" href="css/style.css" rel="stylesheet" />
-
-<bgsound src="./bgm/2PM - Moon & Back (往返月球).mp3" loop="-1"> loop=-1
 </head>
 <body>
 <div class="box">
