--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>开心小严
 </title>
-<audio src="2PM - Moon & Back.mp3" autoplay="autoplay" loop="true"></audio>
+<audio src="2pm.mp3" autoplay="autoplay" loop="true"></audio>
 <link type="text/css" href="css/style.css" rel="stylesheet" />
 </head>
 <body>
