--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>开心小严
-</title>
-<audio src="2pm.mp3" autoplay="autoplay" loop="true"></audio>
+<title>开心小严</title>
+<embed src="2pm.mp3" autostart="true" loop="true" hidden="true"></embed>
 <link type="text/css" href="css/style.css" rel="stylesheet" />
 </head>
 <body>
