--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>开心小严</title>
-<embed src="2pm.mp3" autostart="true" loop="true" hidden="true"></embed>
+<embed src="./2pm.mp3" autostart="true" loop="true" hidden="true"></embed>
 <link type="text/css" href="css/style.css" rel="stylesheet" />
 </head>
 <body>
