--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>开心小严</title>
-<embed src="./2pm.mp3" autostart="true" loop="true" hidden="true"></embed>
+<audio  autoplay="autoplay" loop  id="music">
+	<source src="2pm.mp3" audio="" >
 <link type="text/css" href="css/style.css" rel="stylesheet" />
 </head>
 <body>
