--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>开心小严</title>
 <audio  autoplay="autoplay" loop  id="music">
-	<source src="2pm.mp3" audio="" >
+	<source src="./2pm.mp3" audio="" >
 <link type="text/css" href="css/style.css" rel="stylesheet" />
 </head>
 <body>
