--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <meta charset="UTF-8">
 <title>开心小严</title>
 <link type="text/css" href="css/style.css" rel="stylesheet" />
+	<audio autoplay="autoplay" controls="controls"loop="loop" preload="auto"
+            	src="http://demo.mimvp.com/html5/take_you_fly.mp3">
+	</audio>
 </head>
 <body>
 <div class="box">
